# nevil-sibling-parent

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
config/: control.json  detection  disability  experiment.json  neuron  run_all  symmetry  test.json
include/enki/: CMakeLists.txt
include/enki/viewer/: CMakeLists.txt  Playground.cpp  Viewer.cpp
include/enki/viewer/objects/: EPuckBody.cpp  EPuckRest.cpp  EPuckRing.cpp  (+4 more)
include/json/: jsoncpp.cpp
include/nevil/: individual.hpp  sibling_arena.hpp  sibling_individual.hpp  sibling_parent_arena.hpp  sibling_parent_individual.hpp  sibling_parent_population.hpp  sibling_parent_robot.hpp  sibling_parent_trial.hpp  sibling_population.hpp  sibling_robot.hpp  sibling_trial.hpp  test_arena.hpp  test_individual.hpp  test_population.hpp  test_robot.hpp  test_trial.hpp  trial.hpp  trial_controller.hpp
include/nevil/arena/: arena.hpp  light.hpp  object.hpp  robot.hpp  switch.hpp  wall.hpp
include/nevil/gui/: gui_simulator.hpp  view.hpp
include/nevil/parallel/: parallel_simulator.hpp
include/nevil/robot_controller/: basic_feedforward_nn.hpp
include/nevil/util/: evolution.hpp  json_logger.hpp  logger.hpp  parser.hpp  print.hpp  random.hpp  serialization.hpp  system.hpp
src/: main.cpp  sibling_arena.cpp  sibling_individual.cpp  sibling_parent_arena.cpp  sibling_parent_individual.cpp  sibling_parent_population.cpp  sibling_parent_robot.cpp  sibling_parent_trial.cpp  sibling_population.cpp  sibling_robot.cpp  sibling_trial.cpp  teat_robot.cpp  test_arena.cpp  test_individual.cpp  test_population.cpp  test_robot.cpp  test_trial.cpp  trial_controller.cpp
src/arena/: arena.cpp  light.cpp  robot.cpp  switch.cpp  wall.cpp
src/gui/: gui_simulator.cpp  view.cpp
src/parallel/: parallel_simulator.cpp
src/robot_controller/: basic_feedforward_nn.cpp
src/util/: parser.cpp  random.cpp  serialization.cpp  system.cpp
(+2 files in other folders)
